2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Dose data structures with `const'.

	* rcsbase.h (ciklog, Keyword, ctab, expand_names, Kaccess)
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead)
	(Klocks, Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext)
	(equal_line): Add `const' to var decls.
	* rcsedit.c (ciklog): Add `const' to var definition.
	* rcskeys.c (Keyword): Likewise.
	* rcsmap.c (ctab): Likewise.
	* rcssyn.c (Kaccess, Kauthor, Kbranch, Kcomment, Kdate)
	(Kdesc, Kexpand, Khead, Klocks, Klog, Knext, Kstate)
	(Kstrict, Ksymbols, Ktext, expand_names): Likewise.
	* rcsutil.c (equal_line): Likewise.

2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate parse state into `struct parse_state'.

	Here, "U" means "Throughout, use `LEX (foo)' and `NEXT (foo)'
        instead of the old singular variable names".
	* rcsbase.h (parse_state): New struct.
	(parse_state): New `struct parse_state' decl.
	(LEX, NEXT): New macros.
	(NextString, nexttok, nerror, nextc, rcsline): Delete var decls.
	* rcslex.c: U.
	(parse_state): New `struct parse_state'.
	(nexttok, nextc, rcsline, nerror, NextString): Delete vars.
	* ci.c: U.
	* co.c: U.
	* merge.c: U.
	* rcs.c: U.
	* rcsclean.c: U.
	* rcsdiff.c: U.
	* rcsedit.c: U.
	* rcsgen.c: U.
	* rcskeep.c: U.
	* rcsmerge.c: U.
	* rcssyn.c: U.
	* rlog.c: U.

2010-03-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate workfile state into `struct manifestation'.

	* rcsbase.h (manifestation): New struct.
	(manifestation): New `struct manifestation' decl.
	(MANI, workname, workstdout, PREV): New macros.
	(workname, workstdout, prevkeys, prevauthor, prevdate)
	(prevname, prevrev, prevstate): Delete var decls.
	* rcsfnms.c (workname, workstdout): Delete vars.
	(manifestation): New `struct manifestation'.
	(pairnames): Use `PREV (valid)'.
	* rcskeep.c (prevkeys): Delete var.
	(prevauthor, prevdate, prevname, prevrev, prevstate): Likewise.
	(keepdate): Set `PREV (date)' directly.